--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     />
-    <link rel="icon" href="img/icon.jpg">
+    <link rel="icon" href="img/icon.jpg" />
     <script>
       !(function (f, b, e, v, n, t, s) {
         if (f.fbq) return;
@@ -531,6 +531,67 @@
         <h1
           class="text-center md:text-[42px] text-[34px] font-semibold leading-tight"
         >
+          British billionaires
+        </h1>
+        <div class="grid md:grid-cols-2 grid-cols-1 gap-8 mt-10 mb-10">
+          <div class="group">
+            <div class="pb-4">
+              <img src="img/r1.webp" alt="" class="w-full" />
+            </div>
+            <p class="text-gray-600 uppercase font-medium">
+              Sir James Arthur Ratcliffe
+            </p>
+            <h3 class="text-[24px] font-medium py-2 group-hover:text-blue-600">
+              Sir James Arthur Ratcliffe FIChemE (born 18 October 1952) is a
+              British billionaire, chemical engineer, and businessman
+            </h3>
+          </div>
+          <div class="group">
+            <div class="pb-4">
+              <img src="img/r2.webp" alt="" class="w-full" />
+            </div>
+            <p class="text-gray-600 uppercase font-medium">Sir James Dyson</p>
+            <h3 class="text-[24px] font-medium py-2 group-hover:text-blue-600">
+              Sir James Dyson is an inventor, entrepreneur and philanthropist
+              who has devoted his life to solving problems and developing
+              products through the application
+            </h3>
+          </div>
+          <div class="group">
+            <div class="pb-4">
+              <img src="img/r4.webp" alt="" class="w-full" />
+            </div>
+            <p class=" text-gray-600 uppercase font-medium">
+              Michael Platt
+            </p>
+            <h3 class="text-[24px] font-medium py-2 group-hover:text-blue-600">
+              Michael Edward Platt (born 18 March 1968) is a British billionaire
+              hedge fund manager. He is the co-founder and managing director of
+              BlueCrest Capital
+            </h3>
+          </div>
+          <div class="group">
+            <div class="pb-4">
+              <img src="img/r3.webp" alt="" class="w-full" />
+            </div>
+            <p class="text-gray-600 uppercase font-medium">Hinduja family</p>
+            <h3 class="text-[24px] font-medium py-2 group-hover:text-blue-600">
+              The Hinduja family controls multinational conglomerate the Hinduja
+              group with businesses ranging from trucks and lubricants to
+              banking and cable television.
+            </h3>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- end of  tutorials -->
+
+    <!-- tutorials -->
+    <section class="mt-20 pb-16 border-b-[1px]">
+      <div class="max-w-[1220px] m-auto px-4">
+        <h1
+          class="text-center md:text-[42px] text-[34px] font-semibold leading-tight"
+        >
           Tips and tutorials
         </h1>
         <p class="text-center">
@@ -796,9 +857,5 @@
     </script>
   </body>
 </html>
-git init
-git add .
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/wenfront/coin1.git
-git push -u origin main
+git init git add . git commit -m "first commit" git branch -M main git remote
+add origin https://github.com/wenfront/coin1.git git push -u origin main
