--- a/index.html
+++ b/index.html
@@ -538,10 +538,10 @@
             <div class="pb-4">
               <img src="img/r1.webp" alt="" class="w-full" />
             </div>
-            <p class="text-gray-600 uppercase font-medium">
+            <p class="text-[24px] text-gray-600 uppercase font-medium">
               Sir James Arthur Ratcliffe
             </p>
-            <h3 class="text-[24px] font-medium py-2 group-hover:text-blue-600">
+            <h3 class=" font-medium py-2 group-hover:text-blue-600">
               Sir James Arthur Ratcliffe FIChemE (born 18 October 1952) is a
               British billionaire, chemical engineer, and businessman
             </h3>
@@ -550,8 +550,8 @@
             <div class="pb-4">
               <img src="img/r2.webp" alt="" class="w-full" />
             </div>
-            <p class="text-gray-600 uppercase font-medium">Sir James Dyson</p>
-            <h3 class="text-[24px] font-medium py-2 group-hover:text-blue-600">
+            <p class="text-[24px] text-gray-600 uppercase font-medium">Sir James Dyson</p>
+            <h3 class=" font-medium py-2 group-hover:text-blue-600">
               Sir James Dyson is an inventor, entrepreneur and philanthropist
               who has devoted his life to solving problems and developing
               products through the application
@@ -561,10 +561,10 @@
             <div class="pb-4">
               <img src="img/r4.webp" alt="" class="w-full" />
             </div>
-            <p class=" text-gray-600 uppercase font-medium">
+            <p class="text-[24px] text-gray-600 uppercase font-medium">
               Michael Platt
             </p>
-            <h3 class="text-[24px] font-medium py-2 group-hover:text-blue-600">
+            <h3 class=" font-medium py-2 group-hover:text-blue-600">
               Michael Edward Platt (born 18 March 1968) is a British billionaire
               hedge fund manager. He is the co-founder and managing director of
               BlueCrest Capital
@@ -574,8 +574,8 @@
             <div class="pb-4">
               <img src="img/r3.webp" alt="" class="w-full" />
             </div>
-            <p class="text-gray-600 uppercase font-medium">Hinduja family</p>
-            <h3 class="text-[24px] font-medium py-2 group-hover:text-blue-600">
+            <p class="text-[24px] text-gray-600 uppercase font-medium">Hinduja family</p>
+            <h3 class=" font-medium py-2 group-hover:text-blue-600">
               The Hinduja family controls multinational conglomerate the Hinduja
               group with businesses ranging from trucks and lubricants to
               banking and cable television.
